2016-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
2016-11-03 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out rdlibraryb(1).
2016-11-03 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out a stream player in 'src/common/streamplayer.cpp' and
	'src/common/streamplayer.h'.
2016-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Got stream audio playout working.
2016-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Added rdbrowserd(8) in 'src/rdbrowserd/'.